Harsha|Regina|Jothee|Charan Refactor. Ordering of api methods
